Fixed bug with scrollbar display

--- a/frontend/src/components/PlayerList/PlayerInformation/WebsiteBans/BanList.css
+++ b/frontend/src/components/PlayerList/PlayerInformation/WebsiteBans/BanList.css
@@ -10,5 +10,5 @@
     width: 100vw;
     display: flex;
     padding: 3rem 3rem 3rem 3rem;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
